split and test separately